tests/type_errors/else2.pylambda
print 1;
else {
    print 1;
}